// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Main /> should render with custom title 1`] = `
<div>
  <h2>
    title
  </h2>
</div>
`;

exports[`<Main /> should render with default title 1`] = `
<div>
  <h2>
    test
  </h2>
</div>
`;
